# hypyrpyram

./: README.md  pyproject.toml  setup.py
hypyrpyram/: hyp.py
