[build-system]
requires = ["setuptools>=42", "build", "twine", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperparam"
version = "0.1.0"
description = "A description of your package"
readme = "README.md"
authors = [
    { name = "Hyperparam", email = "kenny@hyperparam.app" }
]
maintainers = [
    { name = "Hyperparam", email = "kenny@hyperparam.app" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "wheel"
]

[project.urls]
"Homepage" = "https://github.com/hyparam/hypyrpyram"

[project.scripts]
hyp = "hypyrpyram.hyp:main"
hyperparam = "hypyrpyram.hyp:main"
